crates/codegen/language/tests/src/fail/parsing/duplicate_map_key/test.stderr
error: Duplicate map key.
  --> src/fail/parsing/duplicate_map_key/test.rs:18:25
   |
18 |                         field_1 = Required(Baz),
   |                         ^^^^^^^
